# ExtensionCC

./: .envrc  .gitattributes  .gitignore  .tmuxinator.yml  CMakeLists.txt  pyrightconfig.json  readme.md  shell.nix
scripts/: getpybindincludes.sh  getpybindsuffix.sh  runpythonfile  startshell.sh
src/: dev.py  evalinparallel.py  evaluate.py  find_best_solutions.py  gen_images.py  gen_subset.py  main_functions.py  plotter.py  solutions2json.py  summarize.py
src/cpp/: cgal.h  chgraph.cpp  chgraph.h  clique.cpp  clique.h  com.cpp  com.h  common.h  debug.h  dsu.cpp  dsu.h  dualgraph.cpp  dualgraph.h  example_cgal.cpp  example_pybind11.cpp  find_components.cpp  find_components.h  geometry_utils.cpp  geometry_utils.h  gridsolver.cpp  gridsolver.h  intersection_predicates.cpp  intersection_predicates.h  partition_constructor.cpp  partition_constructor.h  polygon_cover.cpp  polygon_cover.h  reduce.cpp  reduce.h  rng.cpp  rng.h  tree.cpp  tree.h  vcc.cpp  vcc.h  visibility.cpp  visibility.h
src/cpp/algorithms/: clique_all_edges.cpp  clique_decomposition.cpp  clique_visibility_delaunay.cpp  clique_visibility_extension.cpp  clique_whole_polygon.cpp  delaunay_extension_mapping.cpp  extension_triangulation.cpp  fully_visible_delaunay.cpp  fully_visible_extension.cpp  fully_visible_extension_graph_calculation.cpp  fully_visible_subextension.cpp  fully_visible_subextension_omp.cpp  gridsolver.cpp  list_graphs.cpp  non_convex_polygon_partition.cpp  reduce_solutions.cpp  simple_merge_convex_partition.cpp  vispair.cpp  vispolsegs.cpp
src/cpp/triangulation/: polygon_delaunay.cpp  polygon_delaunay.h  polygon_delaunay_constrained.cpp  triangulation.cpp  triangulation.h
src/py/: algorithms.py  cover.py  evaluator.py  io.py  multi_summarizer.py  polygon.py  polygon_set.py  solution_manager.py  summarizer.py  visualize.py
